--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </aside>
         </section>
 
-        <section>
+        <section class="pet-adopt">
           <p><label for="reason">Why do you want to adopt this pet?</label></p>
           <textarea name="" id="reason"></textarea>
         </section>
