--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </select>
       </section>
 
-      <h1>Applicant Details</h1>
+      <h1 class="h1">Applicant Details</h1>
       <section>
         <p>Name</p>
         <section class="name">
