--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>ADOPT YOUR FAVORITE ANIMAL</h1>
     <form action="">
       <section>
-        <p>Name of the Pet</p>
+        <p><label for="petType">Name of the Pet</label</p>
         <select id="petType">
           <option value="Dog">Dog</option>
           <option value="Cat">Cat</option>
