--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <section>
         <p><label for="petType">Name of the Pet</label</p>
         <select id="petType">
+          <option value=""></option>
           <option value="Dog">Dog</option>
           <option value="Cat">Cat</option>
           <option value="Bird">Bird</option>
